# trreb_data_extractor

./: .gitignore  Makefile  README.md  all_home_detached_extract.py  convert_trreb_pdfs.sh  download_trreb_pdfs.py  extract_after_2020_01.py  extract_prior_to_2020_01.py  extract_tables.py  fix_csv_files.py  pyproject.toml  requirements.txt  setup.sh  trreb_areas_extract.py  trreb_pdf_to_csv.py
docs/: README.md  data_complexity.md  economic_indicators.md  forecasting.md  general_prompt.md  refactoring.md
scripts/: print_help.py  run_pipeline.py
trreb/: __init__.py  config.py
trreb/cli/: __init__.py  __main__.py  commands.py
trreb/cli/commands/: __init__.py  convert.py  economy.py  fetch.py  forecast.py  normalize.py  process.py
trreb/downloader/: trreb_downloader.py
trreb/economic/: __init__.py  integration.py  sources.py
trreb/extractor/: __init__.py  base.py  page_extractor.py  post_2020.py  pre_2020.py
trreb/ml/: __init__.py
trreb/processor/: __init__.py  normalization.py  validation.py
trreb/services/: __init__.py
trreb/services/converter/: __init__.py  post_2020.py  pre_2020.py
trreb/services/csv_converter/: __init__.py  base.py  post_2020.py  pre_2020.py
trreb/services/data_processor/: __init__.py  normalization.py  validation.py
trreb/services/economic/: __init__.py  integration.py  sources.py
trreb/services/fetcher/: __init__.py  downloader.py  extractor.py  facade.py  identifier.py  report.py
trreb/services/forecasting/: evaluation.py  lgbm_model.py  preparation.py  sarimax_model.py  split.py
trreb/services/normalizer/: __init__.py  validation.py
trreb/utils/: logging.py  paths.py
