[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trreb"
version = "0.1.0"
description = "Tool for extracting, processing, and analyzing Toronto Regional Real Estate Board (TRREB) market reports"
readme = "README.md"
authors = [{ name = "Eric", email = "ericyy87@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "annotated-types",
  "anyio",
  "certifi",
  "distro",
  "h11",
  "httpcore",
  "httpx",
  "idna",
  "jiter",
  "loguru",
  "numpy",
  "openai",
  "pandas",
  "pdftotext",
  "pydantic",
  "pydantic_core",
  "PyMuPDF",
  "PyPDF2",
  "python-dateutil",
  "python-dotenv",
  "pytz",
  "requests",
  "six",
  "sniffio",
  "tabula",
  "tabula-py",
  "tqdm",
  "typing-inspection",
  "typing_extensions",
  "tzdata",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.1.0",
  "isort>=5.10.1",
  "flake8>=4.0.1",
  "mypy>=0.931",
]
ml = ["scikit-learn>=1.0.0", "matplotlib>=3.5.0", "seaborn>=0.11.2"]

[project.scripts]
trreb = "trreb.cli.__main__:main"

[tool.setuptools]
packages = ["trreb"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
