[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trreb"
version = "0.1.0"
description = "Tool for extracting, processing, and analyzing Toronto Regional Real Estate Board (TRREB) market reports"
readme = "README.md"
authors = [{ name = "Eric", email = "ericyy87@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "stats-can>=2.9.4",
  "dotenv>=0.9.9",
  "pdftotext>=3.0.0",
  "pypdf2>=3.0.1",
  "openai>=1.75.0",
  "tabula-py>=2.10.0",
  "pandas>=2.2.3",
  "tqdm>=4.67.1",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "pydantic>=2.11.3",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "lightgbm>=4.6.0",
  "matplotlib>=3.10.1",
  "pmdarima>=2.0.4",
  "click>=8.1.8",
  "cython>=3.0.12",
  "numpy>=2.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.1.0",
  "isort>=5.10.1",
  "flake8>=4.0.1",
  "mypy>=0.931",
]
ml = ["scikit-learn>=1.0.0", "matplotlib>=3.5.0", "seaborn>=0.11.2"]

[project.scripts]
trreb = "trreb.cli.__main__:main"

[tool.setuptools]
packages = ["trreb"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
